Yorum satırları tekrardan düzenlendi

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Google Beta</title>
 </head>
 <body>
+    <!--
+        Google görüntüsü ortalanarak eklendi
+    -->
     <center>
         <img src="https://web.archive.org/web/19981202230410im_/http://www.google.com/google.jpg" alt="Google Beta">
     </center>
@@ -19,11 +22,17 @@
         <input type="submit" value="Google Search">
         <input type="submit" name="sa" value="I'm feeling lucky">
         <br>
+        <!--
+            Butonlar ve search bar eklendi
+        -->
     </center>
     <main>
         <br>
         <div >
             <table border="1" style="width:100%; text-align: center;">
+                <!--
+                    Table satır ve sütunlara ayrılarak eklendi
+                -->
                 <tr>
                     <td style="width:40%;">
                         Special Searches
@@ -60,5 +69,8 @@
             Copyright ©1998 Google Inc.
         </center>
     </footer>
+    <!--
+        Footer eklenmesi yapıldı
+    -->
 </body>
 </html>
